# relay-client-rs

./: .gitignore  Cargo.toml  README.md  buf.gen.yaml  buf.yaml
.github/workflows/: generate.yml  release.yml
examples/: Cargo.toml  README.md  basic_usage.rs
scripts/: update-proto.sh
src/: lib.rs
