[package]
name = "relay-client-rs"
version = "0.1.0"
edition = "2024"
description = "Rust gRPC client for Symbiotic Relay"
license = "Apache-2.0"
repository = "https://github.com/symbioticfi/relay-client-rs"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
http = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
pbjson = "0.7"
pbjson-types = "0.7"
