[package]
name = "symbiotic-relay-client"
version = "0.2.0"
edition = "2024"
authors = ["Symbiotic Team <hello@symbiotic.fi>"]
description = "Rust gRPC client for Symbiotic Relay"
license = "MIT"
repository = "https://github.com/symbioticfi/relay-client-rs"
homepage = "https://github.com/symbioticfi/relay-client-rs"
documentation = "https://docs.rs/symbiotic-relay-client"
readme = "README.md"
keywords = ["grpc", "symbiotic", "relay", "client", "blockchain"]
categories = [
  "api-bindings",
  "network-programming",
  "cryptography::cryptocurrencies",
]
exclude = ["examples/"]

[lib]
path = "src/lib.rs"

[dependencies]
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
http = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
pbjson = "0.7"
pbjson-types = "0.7"
